<resources>
    <string name="app_name" translatable="false">whoami</string>
    <string name="startButton">Start</string>
    <string name="beforeButton">Before</string>
    <string name="nextButton">Next</string>
    <string name="logo_name" translatable="false">whoami</string>
    <string name="nameInput">who are you?</string>
    <string name="nameLabel">Name</string>
    <string name="activity_name">GENERAL QUESTIONS</string>
    <string name="ageLabel">Age</string>
    <string name="status_choice_1">Unemployed</string>
    <string name="status_label">Professional status</string>
    <string name="status_choice_2">Teacher</string>
    <string name="status_choice_3">Student</string>
    <string name="optionInterests1">Design</string>
    <string name="optionInterests2">Practicality</string>
    <string name="optionInterests3">Versatility</string>
    <string name="optionInterests4">Efficacy</string>
    <string name="toggleLieDetector" translatable="false">ToggleButton</string>
    <string name="labelInterests">What attracts you?</string>
    <string name="labelPersonality">You\'re more of a …</string>
    <string name="labelSociallyInapt">How socially inapt are you?</string>
    <string name="labelLie">Did you lie to any questions?</string>
    <string name="toggleLieDetectorFalse">No</string>
    <string name="toggleLieDetectorTrue">Yes</string>
    <string name="labelProgExp">Do you have any experience with programming ?</string>
    <string name="labelProgYears">For how many years?</string>

    <string name="YesOrNo_Q">Yes, or No?</string>
    <string name="YesOrNo_A_Yes">Yes</string>
    <string name="YesOrNo_A_No">No</string>
    <string name="YesOrNo_A_Rust" translatable="false">Rust.</string>

    <string name="Boat_Q">As it travels, a boat\'s wood rots, once arrived, each piece of wood are different.</string>
    <string name="Boat_A_SameBoat">It\'s the same boat</string>
    <string name="Boat_A_NotSameBoat">It\'s not the same boat</string>
    <string name="Boat_A_Pointer">I\'ve been looking at it allllll the way; it\'s the same!</string>
    <string name="Boat_A_Boat">It\'s a boat, we don\'t care if it\'s the same</string>
    <string name="Boat_A_Rust">Rust makes faster boats</string>
    <string name="Boat_A_wut">That\'s a stupid question.</string>

    <string name="UCQ_YoN_Boat">Please, select an option</string>
    <string name="UCQ_YoN_Boat_bothEmpty">Please, select an option in each question</string>

    <string name="Liking_Q">What do you like among these choices</string>
    <string name="Liking_A_snake">Snakes</string>
    <string name="Liking_A_sand">To have sand in my eyes</string>
    <string name="Liking_A_suffer">To suffer</string>
    <string name="Liking_A_history">History</string>
    <string name="Liking_error_toast">Why are you here, if you don\'t even like suffering?</string>

    <string name="Dislike_Q">What, among these choices, do you abhor?</string>
    <string name="Dislike_A_life">My life…</string>
    <string name="Dislike_A_beauty">Beautiful things</string>
    <string name="Dislike_A_ugly">Ugly things</string>
    <string name="Dislike_A_rust">Not coding in Rust.</string>
    <string name="Dislike_A_none">Why, everything is nice!</string>
    <string name="Dislike_error_toast">Seriously, answer.</string>

    <string name="mcq_liking_activity_error_toast">Please answer the questions</string>

    <string name="intuitive_Q">Is this interface intuitive?</string>

    <string name="server_Q">Does the server deserve a tip?</string>
    <string name="server_A_Yes">Hell yes!</string>
    <string name="server_A_No">What server?</string>

    <string name="toast_incomplete_inputs">Some inputs are incomplete or incorrect, please verify them</string>
    <string name="error_interests">Please select at least one interest</string>
    <string name="error_age">Please enter an age that\'s between 1 and 120</string>
    <string name="error_professional_status">Please select a professional status</string>
    <string name="error_experience">Please put a valid experience that\'s between 0 and your age</string>
    <string name="activity_name_imaged_1">IMAGED QUESTIONS</string>
    <string name="cyfLabel">Choose your fighter…</string>
    <string name="img_no_select_toast">You must select at least one option</string>
    <string name="img_double_select_toast_error">You can\'t select both options</string>
    <string name="vsLabel">VERSUS</string>
    <string name="idLabel">Who do you identify the most to?</string>
    <string name="opensourceLabel">Which one is better ?</string>
    <string name="BackButton">Back</string>
</resources>