<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questions.activities.generics.man_made.MCQ_Liking">

    <include
        android:id="@+id/include"
        layout="@layout/activity_template"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Liking_Q"
        app:layout_constraintBottom_toTopOf="@+id/MCQ_A_sand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/MCQ_A_snake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/Liking_A_snake"
        app:layout_constraintBottom_toBottomOf="@+id/MCQ_A_sand"
        app:layout_constraintEnd_toStartOf="@+id/MCQ_A_sand"
        app:layout_constraintTop_toTopOf="@+id/MCQ_A_sand" />

    <CheckBox
        android:id="@+id/MCQ_A_sand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Liking_A_sand"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/MCQ_A_suffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Liking_A_suffer"
        app:layout_constraintBottom_toBottomOf="@+id/MCQ_A_sand"
        app:layout_constraintStart_toEndOf="@+id/MCQ_A_sand"
        app:layout_constraintTop_toTopOf="@+id/MCQ_A_sand" />

    <CheckBox
        android:id="@+id/MCQ_A_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Liking_A_history"
        app:layout_constraintEnd_toEndOf="@+id/MCQ_A_sand"
        app:layout_constraintStart_toStartOf="@+id/MCQ_A_sand"
        app:layout_constraintTop_toBottomOf="@+id/MCQ_A_sand" />

</androidx.constraintlayout.widget.ConstraintLayout>