<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GeneralQuestions1">

    <include
        android:id="@+id/include"
        layout="@layout/activity_template"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/activityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/activity_name"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ageLabel"
        app:layout_constraintBottom_toBottomOf="@+id/ageInput"
        app:layout_constraintEnd_toStartOf="@+id/ageInput"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ageInput" />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityName"
        app:layout_constraintVertical_bias="0.44" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="@+id/ageInput"
        app:layout_constraintTop_toBottomOf="@+id/activityName"
        app:layout_constraintVertical_bias="0.32">

        <RadioButton
            android:id="@+id/status_rb_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_choice_1" />

        <RadioButton
            android:id="@+id/status_rb_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_choice_2"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="284dp" />

        <RadioButton
            android:id="@+id/status_rb_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_choice_3"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="332dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/labelProgExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/labelProgExp"
        app:layout_constraintEnd_toStartOf="@+id/switchProgExp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/labelProgYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:text="@string/labelProgYears"
        app:layout_constraintEnd_toStartOf="@+id/inputProgYears"
        app:layout_constraintTop_toBottomOf="@+id/labelProgExp" />

    <EditText
        android:id="@+id/inputProgYears"
        android:layout_width="73dp"
        android:layout_height="48dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelProgExp" />

    <Switch
        android:id="@+id/switchProgExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/labelProgExp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelProgExp" />

</androidx.constraintlayout.widget.ConstraintLayout>